{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 71,
  "lineage": "e8624dba-068a-6f75-611b-8730bad4162a",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_instance_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e5182fad1edfaa68",
            "arn": "arn:aws:ec2:ap-southeast-1:139223339308:instance/i-084e20597441b770e",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-084e20597441b770e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_key_tutorial",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-091fea25262ef8169",
            "private_dns": "ip-10-0-1-220.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a108ba83f8aac20d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04340b484f9885766",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-009046b66554eb9b6"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.terraform_key_pair",
            "module.network_module.aws_subnet.terraform_private_subnet",
            "module.network_module.aws_vpc.terraform_vpc",
            "module.security_group.aws_security_group.terraform_security_group_private_ec2"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_instance_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e5182fad1edfaa68",
            "arn": "arn:aws:ec2:ap-southeast-1:139223339308:instance/i-053582f74f7e4d747",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-053582f74f7e4d747",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_key_tutorial",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0eb907afbd633c447",
            "private_dns": "ip-10-0-0-74.ap-southeast-1.compute.internal",
            "private_ip": "10.0.0.74",
            "public_dns": "ec2-18-141-8-150.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.141.8.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c061b92d98601665",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d38e135d61af3916",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e815158b2c5bdf0b"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.terraform_key_pair",
            "module.network_module.aws_subnet.terraform_public_subnet",
            "module.network_module.aws_vpc.terraform_vpc",
            "module.security_group.aws_security_group.terraform_security_group_public_ec2"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "terraform_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-06f408e76253b8043",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-13-251-71-235.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.251.71.235",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:139223339308:internet-gateway/igw-0d2cee527505f709d",
            "id": "igw-0d2cee527505f709d",
            "owner_id": "139223339308",
            "vpc_id": "vpc-0c9434d2eda2a6839"
          },
          "dependencies": [
            "module.network_module.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terraform_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06f408e76253b8043",
            "connectivity_type": "public",
            "id": "nat-0211a2cbfd3b98e50",
            "network_interface_id": "eni-0c80c8f1809ccb18b",
            "private_ip": "10.0.0.107",
            "public_ip": "13.251.71.235",
            "subnet_id": "subnet-0d38e135d61af3916"
          },
          "dependencies": [
            "module.network_module.aws_eip.terraform_eip",
            "module.network_module.aws_subnet.terraform_public_subnet",
            "module.network_module.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_route_table_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:139223339308:route-table/rtb-0ee16f5d44f156d6d",
            "id": "rtb-0ee16f5d44f156d6d",
            "owner_id": "139223339308",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0211a2cbfd3b98e50",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0c9434d2eda2a6839"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_module.aws_eip.terraform_eip",
            "module.network_module.aws_nat_gateway.terraform_nat_gateway",
            "module.network_module.aws_subnet.terraform_public_subnet",
            "module.network_module.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_route_table_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:139223339308:route-table/rtb-07c8157e13b009ef9",
            "id": "rtb-07c8157e13b009ef9",
            "owner_id": "139223339308",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d2cee527505f709d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0c9434d2eda2a6839"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_module.aws_internet_gateway.terraform_internet_gateway",
            "module.network_module.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform_private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b0599e48bd08959",
            "route_table_id": "rtb-0ee16f5d44f156d6d",
            "subnet_id": "subnet-04340b484f9885766"
          },
          "dependencies": [
            "module.network_module.aws_eip.terraform_eip",
            "module.network_module.aws_nat_gateway.terraform_nat_gateway",
            "module.network_module.aws_route_table.terraform_route_table_private_subnet",
            "module.network_module.aws_subnet.terraform_private_subnet",
            "module.network_module.aws_subnet.terraform_public_subnet",
            "module.network_module.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform_public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e477ab327d71922",
            "route_table_id": "rtb-07c8157e13b009ef9",
            "subnet_id": "subnet-0d38e135d61af3916"
          },
          "dependencies": [
            "module.network_module.aws_internet_gateway.terraform_internet_gateway",
            "module.network_module.aws_route_table.terraform_route_table_public_subnet",
            "module.network_module.aws_subnet.terraform_public_subnet",
            "module.network_module.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:139223339308:subnet/subnet-04340b484f9885766",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-04340b484f9885766",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "139223339308",
            "vpc_id": "vpc-0c9434d2eda2a6839"
          },
          "dependencies": [
            "module.network_module.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:139223339308:subnet/subnet-0d38e135d61af3916",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0d38e135d61af3916",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "139223339308",
            "vpc_id": "vpc-0c9434d2eda2a6839"
          },
          "dependencies": [
            "module.network_module.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:139223339308:vpc/vpc-0c9434d2eda2a6839",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0de3a29de8b21b438",
            "default_route_table_id": "rtb-0cd11f593cb0cc9c3",
            "default_security_group_id": "sg-0367911ecaf53d22b",
            "dhcp_options_id": "dopt-f3418495",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c9434d2eda2a6839",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cd11f593cb0cc9c3",
            "owner_id": "139223339308"
          }
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_security_group_private_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:139223339308:security-group/sg-009046b66554eb9b6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-009046b66554eb9b6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20210727161424626900000002",
            "name_prefix": "terraform-",
            "owner_id": "139223339308",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c9434d2eda2a6839"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_module.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_security_group_public_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:139223339308:security-group/sg-0e815158b2c5bdf0b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e815158b2c5bdf0b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20210727161424625800000001",
            "name_prefix": "terraform-",
            "owner_id": "139223339308",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c9434d2eda2a6839"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_module.aws_vpc.terraform_vpc"
          ]
        }
      ]
    }
  ]
}